////////////////////////////////////////////////////////////
//
// Pharmora Database Schema
// Version 1.0
// Status : Frozen
//
////////////////////////////////////////////////////////////

Table users {

  id bigint [pk, increment]

  uuid uuid [unique, not null]

  name varchar [not null]

  email varchar [unique, not null]

  phone varchar

  avatar varchar

  password varchar [not null]

  email_verified_at timestamp

  last_login_at timestamp

  remember_token varchar

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp

}

Table organization_settings {

  id bigint [pk, increment]

  organization_name varchar [not null]

  business_type varchar [not null]

  workspace_email varchar [not null]

  phone varchar

  address text

  country varchar

  timezone varchar [not null]

  language varchar [not null]

  logo varchar

  created_at timestamp [not null]

  updated_at timestamp [not null]

}

Table categories {

  id bigint [pk, increment]

  uuid uuid [unique, not null]

  code varchar [unique, not null]

  name varchar [unique, not null]

  description text

  status varchar [not null]

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp

}

Table suppliers {

  id bigint [pk, increment]

  uuid uuid [unique, not null]

  code varchar [unique, not null]

  name varchar [not null]

  contact_person varchar

  email varchar

  phone varchar

  address text

  status varchar [not null]

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp

}

Table products {

  id bigint [pk, increment]

  uuid uuid [unique, not null]

  category_id bigint [not null]

  supplier_id bigint [not null]

  sku varchar [unique, not null]

  barcode varchar [unique]

  name varchar [not null]

  description text

  unit varchar [not null]

  purchase_price decimal [not null]

  selling_price decimal [not null]

  current_stock integer [not null]

  minimum_stock integer [not null]

  image varchar

  status varchar [not null]

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp

}

Table inventory_movements {

  id bigint [pk, increment]

  uuid uuid [unique, not null]

  product_id bigint [not null]

  user_id bigint [not null]

  movement_type varchar [not null]

  quantity integer [not null]

  stock_before integer [not null]

  stock_after integer [not null]

  notes text

  created_at timestamp [not null]

}

////////////////////////////////////////////////////////////
//
// Relationships
//
////////////////////////////////////////////////////////////

Ref: products.category_id > categories.id

Ref: products.supplier_id > suppliers.id

Ref: inventory_movements.product_id > products.id

Ref: inventory_movements.user_id > users.id